[package]
name = "rust-solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-shared-utils = { path = "../../../rust-shared-utils" }

regex = "1.10.2"
thiserror = "1.0.51"
once_cell = "1.19.0"
paste = "1.0.14"
