[package]
name = "rust-solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
rust-shared-utils = { path = "../../../rust-shared-utils" }

thiserror = "1.0.51"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
